--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-remove-console": "^6.8.0",
     "babel-plugin-transform-remove-debugger": "^6.8.0",
     "babel-plugin-webpack-loaders": "^0.7.0",
@@ -93,6 +94,7 @@
     "webpack-merge": "^0.14.0"
   },
   "dependencies": {
+    "autobind-decorator": "^1.3.3",
     "css-modules-require-hook": "^4.0.1",
     "electron-debug": "^1.0.1",
     "font-awesome": "^4.6.3",
