--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
   "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["add-module-exports"],
+  "plugins": [
+    "add-module-exports",
+    "babel-plugin-transform-decorators-legacy"
+  ],
   "env": {
     "production": {
       "presets": ["react-optimize"],
