--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "autobind-decorator": "^1.3.3",
     "css-modules-require-hook": "^4.0.1",
     "electron-debug": "^1.0.1",
+    "electron-json-storage": "^2.0.0",
     "font-awesome": "^4.6.3",
     "lodash": "^4.13.1",
     "long": "^3.2.0",
