--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "material-ui": "^0.15.2",
     "mobx": "^2.4.0",
     "mobx-react": "^3.5.1",
-    "pokemon-go-node-api": "https://github.com/billyvg/Pokemon-GO-node-api",
+    "pogobuf": "^1.1.0",
     "postcss": "^5.1.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
