--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "node": true
   },
   "rules": {
+    "no-underscore-dangle": 0,
     "consistent-return": 0,
     "comma-dangle": 0,
     "no-use-before-define": 0,
