--- a/package.json
+++ b/package.json
@@ -95,27 +95,42 @@
   },
   "dependencies": {
     "autobind-decorator": "^1.3.3",
-    "css-modules-require-hook": "^4.0.1",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-webpack-loaders": "^0.7.1",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-register": "^6.11.6",
+    "co-mocha": "^1.1.3",
+    "css-modules-require-hook": "^4.0.2",
+    "del": "^2.2.2",
+    "devtron": "^1.3.0",
     "electron-debug": "^1.0.1",
+    "electron-devtools-installer": "^2.0.1",
     "electron-json-storage": "^2.0.0",
-    "electron-prebuilt": "^1.3.0",
+    "electron-packager": "^7.7.0",
+    "electron-prebuilt": "^1.3.3",
+    "electron-rebuild": "^1.2.0",
+    "eslint-plugin-import": "^1.13.0",
     "font-awesome": "^4.6.3",
-    "lodash": "^4.13.1",
+    "jsdom": "^9.4.2",
+    "lodash": "^4.15.0",
     "long": "^3.2.0",
-    "material-ui": "^0.15.3",
-    "mobx": "^2.4.0",
-    "mobx-react": "^3.5.1",
-    "pogobuf": "^1.5.3",
-    "postcss": "^5.1.0",
-    "react": "^15.3.0",
-    "react-dom": "^15.2.1",
+    "material-ui": "^0.15.4",
+    "mobx": "^2.4.3",
+    "mobx-react": "^3.5.5",
+    "pogobuf": "^1.6.0",
+    "postcss": "^5.1.2",
+    "react": "^15.3.1",
+    "react-addons-test-utils": "^15.3.1",
+    "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
-    "react-router": "^2.6.0",
+    "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "source-map-support": "^0.4.2"
+    "source-map-support": "^0.4.2",
+    "webpack": "^1.13.2"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x",
