--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,8 +1,13 @@
 {
   "env": {
-    "mocha": true
+    "jest/globals": true
   },
+  "plugins": [
+    "jest"
+  ],
   "rules": {
-    "no-unused-expressions": 0
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error"
   }
 }
