--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,9 @@
     "generator-star-spacing": "off",
     "import/no-unresolved": ["error", { "ignore": ["electron"] }],
     "import/no-extraneous-dependencies": "off",
+    "no-plusplus": 0,
+    "no-bitwise": 0,
+    "no-underscore-dangle": 0,
     "no-console": 0,
     "no-use-before-define": "off",
     "no-multi-assign": 0,
@@ -20,6 +23,7 @@
     "promise/always-return": 2,
     "promise/catch-or-return": 2,
     "promise/no-native": 0,
+    "react/no-array-index-key": 0,
     "react/jsx-no-bind": "off",
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
     "react/prefer-stateless-function": "off",
